chore(style): disabled box-shadow when there has fixed gapped columns

--- a/assets/index.less
+++ b/assets/index.less
@@ -58,7 +58,9 @@
   // ================== Cell ==================
   &-fixed-column-gapped {
     .@{tablePrefixCls}-cell-fix-left-last::after,
-    .@{tablePrefixCls}-cell-fix-right-first::after {
+    .@{tablePrefixCls}-cell-fix-right-first::after,
+    .@{tablePrefixCls}-cell-fix-left-first::after,
+    .@{tablePrefixCls}-cell-fix-right-last::after {
       display: none !important;
     }
   }
